[package]
name = "amiya"
version = "0.0.1"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "experimental middleware-based minimalism async HTTP server framework"
homepage = "https://github.com/7sDream/amiya"
repository = "https://github.com/7sDream/amiya"
readme = "README.md"
license = "BSD-3-Clause-Clear"
keywords = ["async", "web", "http-server", "framework"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
publish = false

[dependencies]
smol = "0.3"
async-net = "0.1"
# TODO: async-h1 and http-types now use async-std, which use smol older 0.1.18 version,
#       this make a huge duplicate dependence and something like recursive dependence,
#       it doesn't lead to problem for now, but we better recheck this issue before publish 0.1
http-types = { version = "2", default-features = false }
async-h1 = "2"
async-trait = "0.1"

[dev-dependencies]
serde = "1.0.114"
serde_json = "1.0.57"
