[package]
name = "amiya"
version = "0.0.5"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "experimental middleware-based minimalism async HTTP server framework"
homepage = "https://github.com/7sDream/amiya"
repository = "https://github.com/7sDream/amiya"
readme = "README.md"
license = "BSD-3-Clause-Clear"
keywords = ["async", "web", "http-server", "framework"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
publish = false

[dependencies]
smol = "1"
http-types = { version = "2", default-features = false }
async-h1 = "2"
async-trait = "0.1"

[dev-dependencies]
num_cpus = "1"
once_cell = "1"
serde = "1"
serde_json = "1"
