[package]
name = "amiya"
version = "0.0.5"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "experimental middleware-based minimalism async HTTP server framework"
homepage = "https://github.com/7sDream/amiya"
repository = "https://github.com/7sDream/amiya"
readme = "README.md"
license = "BSD-3-Clause-Clear"
keywords = ["async", "web", "http-server", "framework"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
publish = false

[dependencies]
async-net = "1"
http-types = { version = "2", default-features = false }
async-h1 = "2"
async-trait = "0.1"
futures-lite = "1"
async-channel = "1"
log = "0.4"

# Built-in executor dependencies
async-executor = { version = "1", optional = true }
async-io =  { version = "1", optional = true }
once_cell =  { version = "1", optional = true }
num_cpus =  { version = "1", optional = true }

[features]
default = ["built-in-executor"]
built-in-executor = ["async-executor", "async-io", "once_cell", "num_cpus"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.8"
serde = "1"
serde_json = "1"
